src/objects/Web_Ad__c.object
<CustomObject>
    <fields>
        <fullName>Ad_Insert_Id__c</fullName>
        <label>Ad Insert Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Position_on_Page__c</fullName>
        <label>Ad Position on Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Web Ads</relationshipLabel>
        <relationshipName>Web_Ads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Web Ads (Bill To)</relationshipLabel>
        <relationshipName>Web_Ads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Web Ads (Client)</relationshipLabel>
        <relationshipName>Web_Ads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_of_Premium_Product__c</fullName>
        <label>Expiry Date of Premium Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_charged__c</fullName>
        <label>Number of Units charged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Id__c</fullName>
        <label>Package Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Product_Name__c</fullName>
        <label>Premium Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <label>Salesperson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Premium_Product__c</fullName>
        <label>Start Date of Premium Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Size__c</fullName>
        <label>Unit Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Ad_Id__c</fullName>
        <label>Web Ad Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wed_Ad_Site_Number__c</fullName>
        <label>Wed Ad Site Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Web Ad</label>
    <nameField>
        <label>Web Ad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>